hphp/hack/test/typecheck/naming_fail_test9.php.exp
File "naming_fail_test9.php", line 10, characters 10-11:
Variable $e is undefined, or not always defined (did you mean $_ instead?) (Naming[2050])
